2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Moved DiskType to commons.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.CommonTypes.csproj:
	  Upgrade .NET version to 4.0.

2015-10-12  Natalia Portillo  <claunia@claunia.com>

	* Partition.cs:
	  Added standard header.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* Partition.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Moved disc image plugins to a separate library.
